[package]
name = "mfi-met-farmer"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenv = "0.15.0"
anchor-lang = "0.26.0"
solana-client = "1.14.13"
solana-sdk = "1.14.13"
solana-account-decoder = "1.14.13"
solana-transaction-status = "1.14.13"
solana-address-lookup-table-program = "1.14.13"
meteora = { git = "https://github.com/mercurial-finance/mercurial-dynamic-amm-sdk", package = "mercurial-amm", features = [
    "cpi",
] }
meteora_vault = { git = "https://github.com/mercurial-finance/vault-sdk", package = "mercurial-vault", features = [
    "cpi",
] }
marginfi = { git = "https://github.com/mrgnlabs/marginfi-v2", package = "marginfi", version = "0.1.0", features = [
    "cpi",
    "client",
    "mainnet-beta",
] }
clap = { version = "4.4.3", features = ["derive"] }
tokio = "1.32.0"
futures = "0.3.28"
futures-util = "0.3.28"
serde = "1.0.188"
serde_json = "1.0.107"
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
base64 = "0.21.4"
pyth-sdk-solana = "0.7.0"
switchboard-v2 = "=0.1.22"
fixed-macro = "1.2.0"
fixed = "1.12.0"
reqwest = "0.11.20"
lazy_static = "1.4.0"
